--- a/package.json
+++ b/package.json
@@ -10,12 +10,22 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@types/puppeteer": "^7.0.4",
+    "axios": "^1.7.2",
+    "cheerio": "^1.0.0-rc.12",
+    "express": "^4.19.2",
+    "puppeteer": "^22.12.1",
+    "puppeteer-extra": "^3.3.6",
+    "puppeteer-extra-plugin-stealth": "^2.11.2",
     "react": "^18.3.1",
-    "react-dom": "^18.3.1"
+    "react-dom": "^18.3.1",
+    "readable-stream": "^4.5.2"
   },
   "devDependencies": {
+    "@types/express": "^4.17.21",
     "@types/react": "^18.3.3",
     "@types/react-dom": "^18.3.0",
+    "@types/readable-stream": "^4.0.14",
     "@typescript-eslint/eslint-plugin": "^7.13.1",
     "@typescript-eslint/parser": "^7.13.1",
     "@vitejs/plugin-react": "^4.3.1",
@@ -25,7 +35,9 @@
     "eslint-plugin-react-refresh": "^0.4.7",
     "postcss-cli": "^11.0.0",
     "tailwindcss": "^3.4.4",
-    "typescript": "^5.2.2",
-    "vite": "^5.3.1"
+    "ts-node": "^10.9.2",
+    "typescript": "^5.5.3",
+    "vite": "^5.3.1",
+    "vite-plugin-proxy": "^0.5.0"
   }
 }
