--- a/package.json
+++ b/package.json
@@ -2,8 +2,10 @@
   "name": "fast-food-deals",
   "private": true,
   "version": "0.0.0",
-  "type": "module",
+  "homepage": "https://{Jesus711}.github.io/{Fast-Food-Deals-App}/",
   "scripts": {
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d dist",
     "dev": "vite",
     "build": "tsc -b && vite build",
     "lint": "eslint . --ext ts,tsx --report-unused-disable-directives --max-warnings 0",
@@ -11,9 +13,6 @@
   },
   "dependencies": {
     "@types/puppeteer": "^7.0.4",
-    "axios": "^1.7.2",
-    "cheerio": "^1.0.0-rc.12",
-    "express": "^4.19.2",
     "puppeteer": "^22.12.1",
     "puppeteer-extra": "^3.3.6",
     "puppeteer-extra-plugin-stealth": "^2.11.2",
@@ -33,6 +32,7 @@
     "eslint": "^8.57.0",
     "eslint-plugin-react-hooks": "^4.6.2",
     "eslint-plugin-react-refresh": "^0.4.7",
+    "gh-pages": "^6.1.1",
     "postcss-cli": "^11.0.0",
     "tailwindcss": "^3.4.4",
     "ts-node": "^10.9.2",
